feat: add GitHub Actions CI/CD workflows
  - Add consolidated CI workflow for code quality and testing
  - Add automated release workflow for version management
  - Configure PHPCS for WordPress coding standards
  - Set up automated plugin zip creation and distribution

--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
   "authors": [
     {
       "name": "Salem Aljebaly",
-      "email": "salem@lamah.co",
-      "homepage": "https://lamah.co",
+      "email": "salemaljebaly@gmail.com",
+      "homepage": "https://github.com/salemaljebaly",
       "role": "Developer"
     }
   ],
