--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,7 @@ jobs:
     - name: Install dependencies
       run: |
         composer install --prefer-dist --no-progress --no-dev
+        composer global config --no-plugins allow-plugins.dealerdirect/phpcodesniffer-composer-installer true
         composer global require wp-coding-standards/wpcs
     
     - name: Configure PHPCS
